Desafio contador con boton

--- a/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
+++ b/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
@@ -1,3 +1,5 @@
-.css-i4bv87-MuiSvgIcon-root {
-    color: black;
+div .css-i4bv87-MuiSvgIcon-root {
+    width: 1.6em;
+    height: 1.6em;
+    margin: 1.6em;
 }
