--- a/proyecto-reactjs/src/Components/NavBar/NavBar.css
+++ b/proyecto-reactjs/src/Components/NavBar/NavBar.css
@@ -1,22 +1,26 @@
 .navbar {
-    background-color: bisque;
-    display: flex;
-    justify-content: space-around;
+    background-color: #0b1d33e6;
+    display: grid;
+    grid-template-columns: min-content auto min-content;
     align-items: center;
     font-size: calc(10px + 2vmin);
     color: white;
     width: 100%;
     position: static;
 }
-.logo img {
+.logo {
     width: 150px;
+    margin: 0.5em 1em;
+
 }
 ul {
     display: flex;
     list-style:none;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0;
+    padding: 1em;
 }
 li .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
-    background-color: bisque;
+    background-color:   #0b1d33e6;
     box-shadow: none;
 }
