--- a/proyecto-reactjs/src/Components/ItemCount/ItemCount.css
+++ b/proyecto-reactjs/src/Components/ItemCount/ItemCount.css
@@ -4,22 +4,28 @@
 }
 .item-count {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 40px;
-    border: 0.5px solid gray;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 0;
 }
-.button-count {
+.item-count .button-count {
     color: black;
-    background-color: #f2f2f2;
-    border: 0.5px solid #000000;  
+    background-color: #3282b8;
+    font-size: 30px;
+    padding: 0;
 }
 .count {
     margin-top: auto;
     margin-bottom: auto;
+    font-size: 20px;
 }
 .item-count-container .add-item {
     background-color: #3282b8;
-    color: #ffffff;
-    border: 1px solid #3282b8;
+    color: #000000;
+    border: 1px solid #000000;
     margin: 0 10px;
+    font-size: 20px;
+    padding: 0;
 }
