--- a/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
+++ b/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
@@ -3,23 +3,23 @@ div .css-i4bv87-MuiSvgIcon-root {
     height: 1.6em;
     margin: 1.6em;
 }
-.cart-container{
+.cartwidget-container{
     width: 450px;
 }
-.cart-container-item{
+.cartwidget-container-item{
     display: flex;
     justify-content: space-around;
     border: 1px solid black;
     margin: 3px;
 }
-.cart-details{
+.cartwidget-details{
     font-size: 18px;
 }
-.cart-image{
+.cartwidget-image{
     width: 100px;
     height: 100px;
 }
-.cart-button-delete{
+.cartwidget-button-delete{
     width: 50px;
     height: 50px;
     margin: auto 0;
