--- a/proyecto-reactjs/src/Components/ItemCount/ItemCount.css
+++ b/proyecto-reactjs/src/Components/ItemCount/ItemCount.css
@@ -12,8 +12,8 @@
 }
 .item-count .button-count {
     color: black;
-    background-color: #3282b8;
-    font-size: 30px;
+    background-color: #cccccc;
+    font-size: 20px;
     padding: 0;
 }
 .count {
