Desafio Item Collection

--- a/proyecto-reactjs/src/Components/NavBar/NavBar.css
+++ b/proyecto-reactjs/src/Components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #0b1d33e6;
+    background-color: #0b1d33;
     display: grid;
     grid-template-columns: min-content auto min-content;
     align-items: center;
@@ -23,9 +23,16 @@ ul {
 .button-navbar {
     background-color: inherit;
     border: none;
+    color: white;
+    font-size: calc(10px + 2vmin);
 }
 .link-navbar {
     color: #ffffff;
     text-decoration: none;
     font-size: 3rem;
+    background-color: #0b1d33;
 }
+.css-6hp17o-MuiList-root-MuiMenu-list{
+    background-color: #0b1d33;
+}
+
