--- a/proyecto-reactjs/src/Pages/Styles.css
+++ b/proyecto-reactjs/src/Pages/Styles.css
@@ -30,6 +30,32 @@ h1 {
     margin-right: 10px;
     box-sizing: border-box;
 }
+.width {
+    width: calc(100% - 20px);
+}
+.cart-empy{
+    left: 31.25%;
+    width: calc(37.5% - 20px);
+    position: relative;
+}
+.text-empy {
+    padding: 10px 0;
+    text-align: center;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa ;
+}
+.button-empy {
+    width: 100%;
+    height: 100%;
+    min-height: 44px;
+    letter-spacing: 1px;
+    border: 1px solid #333;
+    text-transform: uppercase;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+}
 .cart-container{
     display: flex;
     align-items: center;
