--- a/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
+++ b/proyecto-reactjs/src/Components/CartWidjet/CartWidget.css
@@ -3,21 +3,31 @@ div .css-i4bv87-MuiSvgIcon-root {
     height: 1.6em;
     margin: 1.6em;
 }
+.container-cart-icon{
+    display: flex;
+}
 .cartwidget-container{
-    width: 450px;
+    width: 500px;
+    padding: 0 5px;
 }
 .cartwidget-container-item{
     display: flex;
     justify-content: space-around;
     border: 1px solid black;
-    margin: 3px;
+    margin: 10px 0;
+    min-width: 110px;
+}
+.container-img-cartwidget{
+    margin: 10px 0 ;
 }
 .cartwidget-details{
     font-size: 18px;
 }
 .cartwidget-image{
     width: 100px;
-    height: 100px;
+}
+.cartwidget-container-price{
+    display: block;
 }
 .cartwidget-button-delete{
     width: 50px;
@@ -26,4 +36,23 @@ div .css-i4bv87-MuiSvgIcon-root {
 }
 div .css-i4bv87-MuiSvgIcon-root{
     margin: auto;
+}
+.btn-ir-carrito{
+    background: none;
+    border: none;
+    width: 100%;
+    font-size: 20px;
+    padding: 0;
+    min-height: 30px;
+}
+.h2-cartwidget {
+    border-bottom: 1px solid #cccccc;
+    font-size: 30px;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    display: block;
+    margin: 0;
+    padding: 15px 0;
+    position: relative;
+    text-align: center;
 }
