--- a/proyecto-reactjs/src/Pages/Styles.css
+++ b/proyecto-reactjs/src/Pages/Styles.css
@@ -1,37 +1,145 @@
-.link {
+.decoration-none {
     text-decoration: none;
 }
 .notfound-image{
     height: 600px;
 }
-.links {
-    font-size: 40px;
+.link-inicio {
     color: black;
+    font-size: 40px;
 }
 .contacto-image {
     height: 400px;
+    margin: 10px;
+}
+.img-home{
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+.h2-home{
+    font-size: 30px;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    font-weight: 400;
+    border-bottom: 1px solid #cccccc;
+    margin: 25px auto;
+    padding-top: 20px;
+}
+.p-home {
+    font-size: 18px;
+    line-height: 36px;
+    margin: 0 auto 80px auto;
+    width: calc(80% - 20px);
+}
+.container-card{
+    padding: 15px;
+}
+.container-home-lore {
+    display: grid;
+    grid-template-areas: "img1 lore1"
+                         "lore2 img2";
+    grid-template-columns: 50% 50%;
+    margin: 30px;
+}
+.img-home-lore {
+    grid-area: img1;
+    max-width: 50vw;
+}
+.lore-home-1{
+    grid-area: lore1;
+    max-width: 50vw;
+    margin: 0 10px;
+    padding: 0 10px;
+}
+.p-lore-home {
+    padding: 15px 0;
+    margin: 0 auto;
+}
+.img-home-lore2 {
+    grid-area: img2;
+    max-width: 50vw;
+}
+.lore-home-2{
+    grid-area: lore2;
+    max-width: 50vw;
+    margin: 0 10px;
+    padding: 0 10px;
+}
+.h2-cart {
+    border-bottom: 1px solid #cccccc;
+    font-size: 30px;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    display: block;
+    margin: 15px auto 5px 0;
+}
+.container-vaciar{
+    display: inline-grid;
+    width: 100%;
+    justify-content: end;
+}
+.vaciar {
+    display: grid;
+}
+.btn-vaciar{
+    max-height: 50px;
+    max-width: max-content;
+}
+.h3-cart{
+    font-weight: 500;
+    font-size: 26px;
+    text-transform: uppercase;
+    line-height: 1.5;
+    display: block;
+    letter-spacing: 2px;
+    margin: 0 auto 15px 0;
+    position: relative;
+}
+.width-1 {
+    width: calc(68.75% - 20px);
+}
+.width-2 {
+    width: calc(31.25% - 20px);
+}
+.width-3 {
+    width: calc(50% - 20px);
+}
+.column{
+    display: inline;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+    position: relative;
+}
+.width {
+    width: calc(100% - 20px);
+}
+.p-cart{
+    font-weight: 500;
+    font-size: 18px;
+    margin: 15px 0;
+    line-height: 1.5
+}
+.span {
+    font-weight: normal;
+}
+.button-delete {
+    position: absolute;
+    right: 0;
+    top: 20px
 }
 .cart-view-container {
     max-width: 1200px;
     position: relative;
     margin: auto;
     text-align: start;
-}
-h1 {
-    border-bottom: 1px solid #cccccc
-}
-.container{
-    width: calc(68.75% - 20px);
-}
-.column{
-    float: left;
-    display: inline;
-    margin-left: 10px;
-    margin-right: 25px;
-    box-sizing: border-box;
-}
-.width {
-    width: calc(100% - 20px);
+    overflow: hidden;
 }
 .cart-empy{
     left: 31.25%;
@@ -45,16 +153,18 @@ h1 {
     border-bottom: 1px solid #aaa ;
 }
 .button-empy {
+    font-size: 20px;
+    color: #3282b8;
+    font-weight: bolder;
     width: 100%;
     height: 100%;
-    min-height: 44px;
-    letter-spacing: 1px;
+    min-height: 50px;
+    letter-spacing: 2px;
     border: 1px solid #333;
     text-transform: uppercase;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-top: 25px;
 }
 .cart-container{
     display: flex;
@@ -64,24 +174,58 @@ h1 {
     position: relative;
     border-bottom: 1px solid #cccccc;
 }
-h2 {
-    font-weight: 300;
-    font-size: 24px;
-    text-transform: uppercase;
+.cart-image{
+    width: 100%;
+}
+.total {
+    padding-top: 20px;
+    padding-left: 40px;
+}
+.p-total {
+    font-weight: 500;
+    font-size: 26px;
     line-height: 1.5;
-    color: #1b262c;
     display: block;
     letter-spacing: 2px;
-    margin: 0 auto 15px 0;
-}
-.cart-image{
-    width: 200px;
-}
-.cart-total {
-    font-weight: 700;
-    font-size: larger;
-}
-.right {
-    float: right;
+    margin: 10px 0;
     position: relative;
+}
+.button-cart{
+    height: 100%;
+    width: 100%;
+    margin: 10px 0;
+    font-size: 20px;
+    padding: 0;
+    min-height: 54px;
+    position: relative;
+}
+.button-completar{
+    background-color: #3282b8;
+    color: white;
+    border: 1px solid #3282b8;
+}
+.pagos-cart{
+    max-width: 100%;
+    height: auto;
+    margin: 10px 0;
+    position: relative;
+}
+.seguir-comprando {
+    color: #3282b8;
+}
+.button-seguir{
+    background: none;
+    border: none;
+}
+.css-bdhsul-MuiTypography-root-MuiDialogTitle-root{
+    text-align: center;
+    font-size: 35px !important;
+    border-bottom: 1px solid #cccccc;
+    padding: 0;
+}
+.m0{
+    margin: 0;
+}
+.align-center {
+    text-align: center;
 }
